--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,kiwichatd,chatease-server,rtmpmate" />
+	<meta name="keywords" content="slicease.js,playease.js,chatease.js,rtmpmate" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
@@ -76,8 +76,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
@@ -99,11 +98,12 @@
 			<div id='news'>
 				<h3>News</h3>
 				<ul class='u5 square'>
+					<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat & rtmp media server, beta released.<i> - Oct. 31, 2018</i></li>
 					<li>Added UI controls for <a href='slicease.html'>slicease.js</a> at version 3.0.07.<i> - Jul. 27, 2018</i></li>
-					<li>The chatease-server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0.<i> - Dec. 13, 2017</i></li>
+					<li>The chatease-server was renamed as kiwichatd at version 2.0.<i> - Dec. 13, 2017</i></li>
 					<li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
 					<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
-					<li>Planning to build an HTML5 live streaming server: <a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
+					<li>Planning to build an HTML5 live streaming server: <a href='rtmpmate.html'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
 					<li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
 					<li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
 					<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
@@ -173,23 +173,19 @@
 			height: prt.clientHeight,
 			sources: [{
 				file: 'images/slider/img1.png',
-				link: 'http://studease.cn/slicease',
+				link: 'http://studease.cn/slicease.html',
 				target: '_blank'
 			}, {
 				file: 'images/slider/img2.png',
-				link: 'http://studease.cn/playease',
+				link: 'http://studease.cn/playease.html',
 				target: '_blank'
 			}, {
 				file: 'images/slider/img3.png',
-				link: 'http://studease.cn/chatease',
+				link: 'http://studease.cn/chatease.html',
 				target: '_blank'
 			}, {
 				file: 'images/slider/img4.png',
-				link: 'http://studease.cn/kiwichatd',
-				target: '_blank'
-			}, {
-				file: 'images/slider/img5.png',
-				link: 'https://github.com/studease/kiwistrmd',
+				link: 'http://studease.cn/rtmpmate.html',
 				target: '_blank'
 			}],
 			range: '3-9',
