--- a/slicease.html
+++ b/slicease.html
@@ -76,8 +76,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
@@ -138,11 +137,7 @@ slicease('slicer').setup({
         target: '_blank'
     }, {
         file: 'images/img4.png',
-        link: 'http://studease.cn/kiwichatd',
-        target: '_blank'
-    }, {
-        file: 'images/img5.png',
-        link: 'https://github.com/studease/kiwistrmd',
+        link: 'http://studease.cn/rtmpmate',
         target: '_blank'
     }],
     range: '3-9',
