--- a/chatease.html
+++ b/chatease.html
@@ -78,8 +78,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
@@ -265,8 +264,8 @@ _eventMapping = {
 			
 			<h3>Server</h3>
 			<p>
-				1.0 <a href='kiwichatd.html' target='_blank'>kiwichatd</a></br>
-				1.1 <a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a>
+				1.0 <a href='https://github.com/studease/kiwichatd' target='_blank'>kiwichatd</a></br>
+				1.1 <a href='rtmpmate.html' target='_blank'>rtmpmate</a>
 			</p>
 			
 			<h3>Software License</h3>
