--- a/playease.html
+++ b/playease.html
@@ -79,8 +79,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
