--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-	<title>chatease-server - StudEase.cn</title>
+	<title>rtmpmate - StudEase.cn</title>
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="kiwichatd,chatease-server,websocket,高并发,聊天室,服务器" />
-	<meta name="description" content="This is a websocket chat server coded in C." />
+	<meta name="keywords" content="rtmpmate,rtmp,websocket,高并发,聊天室,服务器" />
+	<meta name="description" content="This is a websocket chat server, and rtmp media server which transforming rtmp packages into fmp4 stream." />
 	<meta name="author" content="Tony Lau" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -76,8 +76,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
@@ -90,63 +89,36 @@
 	<div class='wrap'>
 		<div>
 		<section>
-			<h2>chatease-server</h2>
+			<h2>rtmpmate</h2>
 			<p>
-				[source] <a href='https://github.com/studease/chatease-server' target='_blank'>https://github.com/studease/chatease-server (1.1)</a><br/>
+				[source] <a href='https://github.com/studease/rtmpmate' target='_blank'>https://github.com/studease/rtmpmate</a><br/>
 				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br/>
 				公众号：STUDEASE<br/>
 				QQ群：528109813
 			</p>
 			
 			<p>
-				This is a high-performance websocket chat server coded in C.
+				This is a websocket chat server, and rtmp media server which transforming rtmp packages into fmp4 stream.
 			</p>
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
-				<li>This server was renamed as <a href='kiwichatd.html'>kiwichatd</a> at version 2.0.<i> - Dec. 13, 2017</i></li>
-				<li>Fixed bad request caused crash, & incomplete http header caused endless loop issues in version 1.0.39.<i> - Aug. 15, 2017</i></li>
-				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
-				<li><a href='chatease-server.html'>Chatease-server</a>, a websocket chat server coded in C, beta released.<i> - Aug. 4, 2016</i></li>
+				<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat & rtmp media server, beta released.<i> - Oct. 31, 2018</i></li>
 			</ul>
 			
-			<h3>Preparation</h3>
-			<p>
-				For the Enterprise Edition, supply an interface to return a JSON object formatted as /data/userinfo.json.<br/>
-				While a client connecting to upgrade protocol, it sends an identify upstream request, carrying channel and token params, to get the user info, which will decide whether the operation will be satisfied.
-			</p>
-			<p>
-				The Preview Edition is more like a stand-alone server. The user info, includes name, icon, role, and channel state could be present in params. However, this is not safe.
-			</p>
+			<h3>Download</h3>
+			<h5>Static Builds</h5>
+				x86: <a href='static/rtmpmate-x86-latest-static.zip'>rtmpmate-x86-latest-static.zip</a>
 			
-			<h3>Build</h3>
-			<p>
-				To build chatease-server, you need CMake 3.5 and or above, and OpenSSL installed. Then run:
-			</p>
-
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
-cmake .
-make
-</pre>
-<br/>
-
-			<h3>Run</h3>
-
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
-sudo ./start.sh
-</pre>
-<br/>
-
 			<h3>Client</h3>
 			<p>
+				<a href='playease.html' target='_blank'>playease.js</a><br/>
 				<a href='chatease.html' target='_blank'>chatease.js</a>
 			</p>
 			
 			<h3>License</h3>
 			<p>
-				Apache License 2.0.
+				MIT
 			</p>
 		</section>
 		</div>
