--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="playease.js,chatease.js,kiwichatd,chatease-server,rtmpmate,微信直播,弹幕直播" />
+	<meta name="keywords" content="playease.js,chatease.js,rtmpmate,微信直播,弹幕直播" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
