--- a/solutions.html
+++ b/solutions.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="playease.js,chatease.js,kiwichatd,chatease-server,rtmpmate,微信直播,弹幕直播" />
+	<meta name="keywords" content="playease.js,chatease.js,rtmpmate,微信直播,弹幕直播" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
@@ -80,8 +80,7 @@
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='kiwichatd.html'>kiwichatd</a></li>
-						<li><a href='https://github.com/studease/rtmpmate' target='_blank'>rtmpmate</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
