--- a/faq.html
+++ b/faq.html
@@ -119,38 +119,6 @@
 		</section>
 		</article>
 		
-		<article id='chatease-server'>
-		<section>
-			<h3>chatease-server</h3>
-			<p>
-				Known Issues and Planned Features: 
-			</p>
-			<ul class='u5 square'>
-				<li>
-					Online user amount doesn't specified in "onIdent" callback.
-					<p><a>A: </a>Fixed in version 1.0.23.<i> - Jun. 5 2017</i></p>
-				</li>
-				<li>
-					Write log file, read and parse configuration file.
-					<p><a>A: </a>Done in version 1.0.26.<i> - Jun. 13 2017</i></p>
-				</li>
-				<li>
-					Spinlock overflow issue, and rights control.
-					<p><a>A: </a>Done in version 1.0.29.<i> - Jun. 15 2017</i></p>
-				</li>
-				<li>
-					Http upstream push-status.
-					<p><a>A: </a>Done in version 1.0.33.<i> - Jun. 28 2017</i></p>
-				</li>
-				<li>
-					Fixed bad request caused crash, & incomplete http header caused endless loop issues.
-					<p><a>A: </a>Done in version 1.0.39.<i> - Aug. 15 2017</i></p>
-				</li>
-				<li>Backstage Management System.</li>
-			</ul>
-		</section>
-		</article>
-		
 		<article id='playease'>
 		<section>
 			<h3>playease.js</h3>
@@ -186,6 +154,18 @@
 					Failed to addSourceBuffer for video/audio, especially on Edge.
 					<p><a>A: </a>Fixed in version 1.0.82.<i> - Aug. 11 2017</i></p>
 				</li>
+			</ul>
+		</section>
+		</article>
+		
+		<article id='rtmpmate'>
+		<section>
+			<h3>rtmpmate</h3>
+			<p>
+				Known Issues and Planned Features: 
+			</p>
+			<ul class='u5 square'>
+				<li>Backstage Management System.</li>
 			</ul>
 		</section>
 		</article>
