--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -107,21 +107,21 @@ a:active, a:focus, a:hover {
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'http://pili-live-hdl.qiniu.qcus.cn/abjlive/stream02.flv',
+				file: 'http://118.190.79.29/live/_definst_/stream02.flv',
 				type: 'flv',
 				label: 'HTTP-FLV'
 			}, {
-				file: 'http://origin.qcus.cn:1935/teach/stream02/manifest.mpd',
+				file: 'http://118.190.79.29/live/_definst_/stream02/manifest.mpd',
 				type: 'dash',
 				label: 'MPEG-DASH'
 			}, {
-				file: 'rtmp://pili-live-rtmp.qiniu.qcus.cn/abjlive/stream02',
+				file: 'rtmp://118.190.79.29/live/_definst_/stream02',
 				type: 'flash',
 				label: 'RTMP-STREAM'
 			}, {
-				file: 'http://pili-live-hls.qiniu.qcus.cn/abjlive/stream02.m3u8',
+				file: 'http://118.190.79.29/live/_definst_/stream02/index.m3u8',
 				type: 'def',
-				label: 'HLS-TS'
+				label: 'HLS'
 			}],
 			mode: 'live',
 			bufferTime: 1,
