--- a/solutions.html
+++ b/solutions.html
@@ -251,7 +251,7 @@
 				type: 'dash',
 				label: 'MPEG-DASH'
 			}, {
-				file: 'rtmp://118.190.79.29/live/_definst_/stream02',
+				file: 'rtmp://118.190.79.29/live/stream02',
 				type: 'flash',
 				label: 'RTMP-STREAM'
 			}, {
