--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -115,7 +115,7 @@ a:active, a:focus, a:hover {
 				type: 'dash',
 				label: 'MPEG-DASH'
 			}, {
-				file: 'rtmp://118.190.79.29/live/_definst_/stream02',
+				file: 'rtmp://118.190.79.29/live/stream02',
 				type: 'flash',
 				label: 'RTMP-STREAM'
 			}, {
