--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -98,28 +98,25 @@
 			</p>
 			
 			<p>
-				This is a websocket chat server, and rtmp media server which transforming rtmp packages into fmp4 stream.
+				This is not only a websocket chat server, but also a functional media server.
 			</p>
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
-				<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat & rtmp media server, beta released.<i> - Oct. 31, 2018</i></li>
+				<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat server & functional media server, beta released.<i> - Oct. 31, 2018</i></li>
 			</ul>
 			
-			<h3>Download</h3>
-			<h5>Static Builds</h5>
-				x86: <a href='static/rtmpmate-x86-latest-static.zip'>rtmpmate-x86-latest-static.zip</a>
+			<h3>Static Builds</h3>
+			<ul class='u5 square'>
+				<li>Windows: <a href='static/rtmpmate-win32-latest.zip'>rtmpmate-win32-latest.zip</a></li>
+				<li>Linux: <a href='static/rtmpmate-linux-latest.zip'>rtmpmate-linux-latest.zip</a></li>
+			</ul>
 			
-			<h3>Client</h3>
-			<p>
-				<a href='playease.html' target='_blank'>playease.js</a><br/>
-				<a href='chatease.html' target='_blank'>chatease.js</a>
-			</p>
-			
-			<h3>License</h3>
-			<p>
-				MIT
-			</p>
+			<h3>Clients</h3>
+			<ul class='u5 square'>
+				<li><a href='playease.html' target='_blank'>playease.js</a></li>
+				<li><a href='chatease.html' target='_blank'>chatease.js</a></li>
+			</ul>
 		</section>
 		</div>
 	</div>
