--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div id='news'>
 				<h3>News</h3>
 				<ul class='u5 square'>
-					<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat & rtmp media server, beta released.<i> - Oct. 31, 2018</i></li>
+					<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat server & functional media server, beta released.<i> - Oct. 31, 2018</i></li>
 					<li>Added UI controls for <a href='slicease.html'>slicease.js</a> at version 3.0.07.<i> - Jul. 27, 2018</i></li>
 					<li>The chatease-server was renamed as kiwichatd at version 2.0.<i> - Dec. 13, 2017</i></li>
 					<li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
