--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -110,6 +110,7 @@
 			<ul class='u5 square'>
 				<li>Windows: <a href='static/rtmpmate-win32-latest.zip'>rtmpmate-win32-latest.zip</a></li>
 				<li>Linux: <a href='static/rtmpmate-linux-latest.zip'>rtmpmate-linux-latest.zip</a></li>
+				<li>Tools: <a href='static/chatease-stress-test-tool.zip'>chatease-stress-test-tool.zip</a></li>
 			</ul>
 			
 			<h3>Clients</h3>
