--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -111,7 +111,8 @@
 				<li>Windows: <a href='static/rtmpmate-win32-latest.zip'>rtmpmate-win32-latest.zip</a></li>
 				<li>Linux: <a href='static/rtmpmate-linux-latest.zip'>rtmpmate-linux-latest.zip</a></li>
 				<li>
-					Tools: <a href='static/chatease-stress-test-tool.zip'>chatease-stress-test-tool.zip</a> (<a href='https://github.com/studease/chatease-stress-test-tool'>README.md</a>)
+					Tools: <a href='static/chatease-stress-test-tool.zip'>chatease-stress-test-tool.zip</a> 
+					(<a href='https://github.com/studease/chatease-stress-test-tool' target='_blank'>README.md</a>)
 				</li>
 			</ul>
 			
