--- a/chatease.html
+++ b/chatease.html
@@ -268,9 +268,10 @@ _eventMapping = {
 			</p>
 			
 			<h3>Software License</h3>
-			<p>
-				Apache License 2.0
-			</p>
+			<ul class='u5 square'>
+				<li><a href='https://github.com/studease/chatease/blob/master/LICENSE' target='_blank'>Apache License 2.0</a></li>
+				<li><a href='https://github.com/studease/chatease/blob/master/NOTICE' target='_blank'>NOTICE</a></li>
+			</ul>
 		</section>
 		</div>
 	</div>
