--- a/playease.html
+++ b/playease.html
@@ -462,9 +462,10 @@ _eventMapping = {
 			<br/>
 			
 			<h3>Software License</h3>
-			<p>
-				Apache License 2.0
-			</p>
+			<ul class='u5 square'>
+				<li><a href='https://github.com/studease/playease/blob/master/LICENSE' target='_blank'>Apache License 2.0</a></li>
+				<li><a href='https://github.com/studease/playease/blob/master/NOTICE' target='_blank'>NOTICE</a></li>
+			</ul>
 		</section>
 		</div>
 	</div>
