--- a/slicease.html
+++ b/slicease.html
@@ -185,9 +185,9 @@ _defaults = {
 			</p>
 			
 			<h3>Software License</h3>
-			<p>
-				MIT.
-			</p>
+			<ul class='u5 square'>
+				<li><a href='https://github.com/studease/slicease/blob/master/LICENSE' target='_blank'>MIT</a></li>
+			</ul>
 		</section>
 		</div>
 	</div>
