BSD 3-Clause License & NOTICE.

--- a/playease.html
+++ b/playease.html
@@ -463,7 +463,7 @@ _eventMapping = {
 			
 			<h3>Software License</h3>
 			<ul class='u5 square'>
-				<li><a href='https://github.com/studease/playease/blob/master/LICENSE' target='_blank'>Apache License 2.0</a></li>
+				<li><a href='https://github.com/studease/playease/blob/master/LICENSE' target='_blank'>BSD 3-Clause License</a></li>
 				<li><a href='https://github.com/studease/playease/blob/master/NOTICE' target='_blank'>NOTICE</a></li>
 			</ul>
 		</section>
