--- a/chatease.html
+++ b/chatease.html
@@ -248,24 +248,24 @@ _eventMapping = {
 			<ul class='u5 square'>
 				<li>
 					<a>send(data)</a>
-					<p>
+					<div>
 						data: An object which will be sent in json format.
-					</p>
+					</div>
 				</li>
 				<li>
 					<a>resize(width, height)</a>
-					<p>
+					<div>
 						width: Width in px.</br>
 						height: Height in px.
-					</p>
+					</div>
 				</li>
 			</ul>
 			
 			<h3>Server</h3>
-			<p>
+			<div>
 				1.0 <a href='https://github.com/studease/kiwichatd' target='_blank'>kiwichatd</a></br>
 				1.1 <a href='rtmpmate.html' target='_blank'>rtmpmate</a>
-			</p>
+			</div>
 			
 			<h3>Software License</h3>
 			<ul class='u5 square'>
