--- a/faq.html
+++ b/faq.html
@@ -94,10 +94,12 @@
 				Known Issues and Planned Features: 
 			</p>
 			<ul class='u5 square'>
-				<li>Self-adaption and resize feature.</li>
 				<li>
-					Control component, & reversed rolling.
-					<p><a>A: </a>Fixed in version 3.0.07.<i> - Jul. 27 2017</i></p>
+					<a>Q: </a>Self-adaption and resize feature.<br/>
+				</li>
+				<li>
+					<a>Q: </a>Control component, & reversed rolling.<br/>
+					<a>A: </a>Fixed in version 3.0.07.<i> - Jul. 27 2017</i>
 				</li>
 			</ul>
 		</section>
@@ -111,10 +113,12 @@
 			</p>
 			<ul class='u5 square'>
 				<li>
-					Couldn't establish connection in IE8/9.<br/>
-					<p><a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while websocket is not supported by IE8/9 natively.</p>
+					<a>Q: </a>Couldn't establish connection in IE8/9.<br/>
+					<a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while websocket is not supported by IE8/9 natively.
 				</li>
-				<li>Nickname format error in some version of IE10/11.</li>
+				<li>
+					<a>Q: </a>Nickname format error in some version of IE10/11.<br/>
+				</li>
 			</ul>
 		</section>
 		</article>
@@ -127,32 +131,32 @@
 			</p>
 			<ul class='u5 square'>
 				<li>
-					"Player is not ready yet!"<br/>
-					<p><a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while video tag is not supported by IE8 natively.</p>
+					<a>Q: </a>"Player is not ready yet!"<br/>
+					<a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while video tag is not supported by IE8 natively.
 				</li>
 				<li>
-					Buffer control in "flv" and "wss" renders.
-					<p><a>A: </a>Done in version 1.0.65.<i> - Jun. 29 2017</i></p>
+					<a>Q: </a>Buffer control in "flv" and "wss" renders.<br/>
+					<a>A: </a>Done in version 1.0.65.<i> - Jun. 29 2017</i>
 				</li>
 				<li>
-					Added support for Firefox and Edge of "flv" render.
-					<p><a>A: </a>Done in version 1.0.67.<i> - Jul. 5 2017</i></p>
+					<a>Q: </a>Added support for Firefox and Edge of "flv" render.<br/>
+					<a>A: </a>Done in version 1.0.67.<i> - Jul. 5 2017</i>
 				</li>
 				<li>
-					Added more UI components, e.g. display, logo, tooltip. And support to multi-quality.
-					<p><a>A: </a>Done in version 1.0.72.<i> - Jul. 12 2017</i></p>
+					<a>Q: </a>Added more UI components, e.g. display, logo, tooltip. And support to multi-quality.<br/>
+					<a>A: </a>Done in version 1.0.72.<i> - Jul. 12 2017</i>
 				</li>
 				<li>
-					Context menu component.
-					<p><a>A: </a>Done in version 1.0.75.<i> - Jul. 14 2017</i></p>
+					<a>Q: </a>Context menu component.<br/>
+					<a>A: </a>Done in version 1.0.75.<i> - Jul. 14 2017</i>
 				</li>
 				<li>
-					New feature: MPEG-DASH.
-					<p><a>A: </a>Done in version 1.0.81.<i> - Aug. 10 2017</i></p>
+					<a>Q: </a>New feature: MPEG-DASH.<br/>
+					<a>A: </a>Done in version 1.0.81.<i> - Aug. 10 2017</i>
 				</li>
 				<li>
-					Failed to addSourceBuffer for video/audio, especially on Edge.
-					<p><a>A: </a>Fixed in version 1.0.82.<i> - Aug. 11 2017</i></p>
+					<a>Q: </a>Failed to addSourceBuffer for video/audio, especially on Edge.<br/>
+					<a>A: </a>Fixed in version 1.0.82.<i> - Aug. 11 2017</i>
 				</li>
 			</ul>
 		</section>
@@ -165,7 +169,9 @@
 				Known Issues and Planned Features: 
 			</p>
 			<ul class='u5 square'>
-				<li>Backstage Management System.</li>
+				<li>
+					<a>Q: </a>Backstage Management System.<br/>
+				</li>
 			</ul>
 		</section>
 		</article>
