--- a/chatease.html
+++ b/chatease.html
@@ -342,6 +342,9 @@ _eventMapping = {
 			},
 			skin: {
 				name: chatease.utils.isMobile() ? 'mobile' : 'def'
+			},
+			bubble: {
+				name: 'def'
 			}
 		});
 		
