--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,9 @@
 			},
 			skin: {
 				name: chatease.utils.isMobile() ? 'mobile' : 'def'
+			},
+			bubble: {
+				name: 'def'
 			}
 		});
 		
