--- a/playease.html
+++ b/playease.html
@@ -590,6 +590,9 @@ _eventMapping = {
 			},
 			skin: {
 				name: chatease.utils.isMobile() ? 'mobile' : 'def'
+			},
+			bubble: {
+				name: 'def'
 			}
 		});
 		
