--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -195,6 +195,9 @@ a:active, a:focus, a:hover {
 			},
 			skin: {
 				name: chatease.utils.isMobile() ? 'mobile' : 'def'
+			},
+			bubble: {
+				name: 'def'
 			}
 		});
 		
