--- a/solutions.html
+++ b/solutions.html
@@ -337,6 +337,9 @@
 			},
 			skin: {
 				name: chatease.utils.isMobile() ? 'mobile' : 'def'
+			},
+			bubble: {
+				name: 'def'
 			}
 		});
 		
