--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 					<li>Planning to build an HTML5 live streaming server: <a href='rtmpmate.html'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
 					<li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
 					<li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
-					<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
+					<li>First stable version for websocket chat released: <a href='chatease.html'>chatease.js</a> 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 					<li><a href='slicease.html'>Slicease.js</a> 3.0 released: Using WebGL.<i> - Feb. 20, 2017</i></li>
 					<li><a href='playease.html'>Playease.js</a>, an HTML5 media player for FLV live streaming, beta released.<i> - Feb. 10, 2017</i></li>
-					<li><a href='chatease-server.html'>Chatease-server</a>, a websocket chat server coded in C, beta released.<i> - Aug. 4, 2016</i></li>
+					<li>Chatease-server, a websocket chat server coded in C, beta released.<i> - Aug. 4, 2016</i></li>
 					<li><a href='chatease.html'>Chatease.js</a>, a client-side script for websocket chat, beta released.<i> - Aug. 1, 2016</i></li>
 					<li><a href='slicease.html'>Slicease.js</a> 2.0 released: New features, e.g. MVC, event-driven, etc.<i> - Dec. 30, 2015</i></li>
 					<li>
