--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -125,7 +125,7 @@ a:active, a:focus, a:hover {
 			}],
 			mode: 'live',
 			bufferTime: 1,
-			maxretries: 0,
+			maxRetries: 0,
 			controls: true,
 			autoplay: false,
 			//poster: 'images/poster.png',
@@ -135,7 +135,7 @@ a:active, a:focus, a:hover {
 				chunkSize: 2 * 1024 * 1024,*/
 				mode: 'cors'
 			},
-			bulletscreen: {
+			bulletCurtain: {
 				enable: true,
 				visible: true
 			},
