--- a/solutions.html
+++ b/solutions.html
@@ -261,7 +261,7 @@
 			}],
 			mode: 'live',
 			bufferTime: 1,
-			maxretries: 0,
+			maxRetries: 0,
 			controls: true,
 			autoplay: false,
 			//poster: 'images/poster.png',
@@ -271,7 +271,7 @@
 				chunkSize: 2 * 1024 * 1024,*/
 				mode: 'cors'
 			},
-			bulletscreen: {
+			bulletCurtain: {
 				enable: true,
 				visible: true
 			},
