--- a/playease.html
+++ b/playease.html
@@ -167,10 +167,6 @@ player.setup({
         label: 'WS-FLV'
     }, {
         file: 'ws://127.0.0.1/live/sample',
-        type: 'rtmpmate',
-        label: 'WS-RTMPMATE'
-    }, {
-        file: 'ws://127.0.0.1/live/sample',
         type: 'wss',
         label: 'WS-fMP4'
     }, {
@@ -195,7 +191,7 @@ player.setup({
         chunkSize: 2 * 1024 * 1024, // For xhr-chunked-loader only
         mode: 'cors'
     },
-    bulletscreen: {
+    bulletCurtain: {
         enable: true,
         visible: true
     },
@@ -254,10 +250,10 @@ _defaults = {
     aspectratio: '16:9',
     file: '',
     sources: [],
-    mode: rendermodes.VOD,
+    mode: renderModes.VOD,
     bufferTime: .1,
-    maxretries: 0,
-    retrydelay: 3000,
+    maxRetries: 0,
+    retryDelay: 3000,
     controls: true,
     autoplay: true,
     airplay: 'allow',
@@ -268,9 +264,9 @@ _defaults = {
     loader: {
         //name: 'xhr-chunked-loader', // For flv render in vod mode only. Otherwise, don't name it out.
         //chunkSize: 2 * 1024 * 1024, // For xhr-chunked-loader only
-        mode: iomodes.CORS
+        mode: io.modes.CORS
     },
-    bulletscreen: {
+    bulletCurtain: {
         enable: true,
         visible: false
     },
@@ -278,12 +274,12 @@ _defaults = {
         visible: false
     },
     render: {
-        name: rendertypes.DEFAULT,
+        name: renderTypes.DEFAULT,
         //bufferLength: 4 * 1024 * 1024, // For flv render in vod mode only
         swf: 'swf/playease.swf'
     },
     skin: {
-        name: skintypes.DEFAULT
+        name: skinTypes.DEFAULT
     },
     events: {
         
@@ -333,7 +329,7 @@ positions = {
 
 playease('player').setup({
     ...
-    bulletscreen: {
+    bulletCurtain: {
         width: 640,
         height: 360,
         enable: true,
@@ -533,7 +529,7 @@ _eventMapping = {
 			}],
 			mode: 'vod',
 			bufferTime: 1,
-			maxretries: 0,
+			maxRetries: 0,
 			controls: true,
 			autoplay: false,
 			//poster: 'images/content/poster.png',
@@ -543,7 +539,7 @@ _eventMapping = {
 				chunkSize: 2 * 1024 * 1024,
 				mode: 'cors'
 			},
-			bulletscreen: {
+			bulletCurtain: {
 				enable: true,
 				visible: true
 			},
