--- a/playease.html
+++ b/playease.html
@@ -310,7 +310,7 @@ playease('player').setup({
 <br/>
 
 			<ul class='u5 square'>
-				<li>Bullet Screen</li>
+				<li>Bullet Curtain</li>
 			</ul>
 
 <?prettify lang=js linenums=true?>
