--- a/chatease.html
+++ b/chatease.html
@@ -177,18 +177,18 @@ _defaults = {
     width: 640,
     height: 400,
     keywords: '',
-    maxlength: 30,  // -1: no limit
-    maxrecords: 50,
-    maxretries: -1, // -1: always
-    retrydelay: 3000,
+    maxLength: 30,  // -1: no limit
+    maxRecords: 50,
+    maxRetries: -1, // -1: always
+    retryDelay: 3000,
     smoothing: false,
     debug: false,
     render: {
-        name: rendermodes.DEFAULT,
+        name: renderModes.DEFAULT,
         swf: 'swf/chatease.swf'
     },
     skin: {
-        name: skinmodes.DEFAULT
+        name: skinModes.DEFAULT
     }
 }
 </pre>
@@ -331,8 +331,8 @@ _eventMapping = {
 			url: 'ws://118.190.79.29/chat/001' + window.location.search,
 			width: 640,
 			height: 400,
-			maxlength: 70,
-			maxretries: -1,
+			maxLength: 70,
+			maxRetries: -1,
 			smoothing: false,
 			debug: true,
 			render: {
