--- a/solutions.html
+++ b/solutions.html
@@ -327,8 +327,8 @@
 			url: 'ws://118.190.79.29/chat/001' + window.location.search,
 			width: 320,
 			height: 400,
-			maxlength: 70,
-			maxretries: -1,
+			maxLength: 70,
+			maxRetries: -1,
 			smoothing: false,
 			debug: true,
 			render: {
