--- a/contact.html
+++ b/contact.html
@@ -162,8 +162,8 @@
 			url: 'ws://118.190.79.29/chat/001' + window.location.search,
 			width: 640,
 			height: 400,
-			maxlength: 70,
-			maxretries: -1,
+			maxLength: 70,
+			maxRetries: -1,
 			smoothing: false,
 			debug: true,
 			render: {
