--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -111,6 +111,10 @@ a:active, a:focus, a:hover {
 				type: 'flv',
 				label: 'HTTP-FLV'
 			}, {
+				file: 'http://118.190.79.29/live/_definst_/stream02.m4v',
+				type: 'fmp4',
+				label: 'HTTP-FMP4'
+			}, {
 				file: 'http://118.190.79.29/live/_definst_/stream02/manifest.mpd',
 				type: 'dash',
 				label: 'MPEG-DASH'
