--- a/solutions.html
+++ b/solutions.html
@@ -247,6 +247,10 @@
 				type: 'flv',
 				label: 'HTTP-FLV'
 			}, {
+				file: 'http://118.190.79.29/live/_definst_/stream02.m4v',
+				type: 'fmp4',
+				label: 'HTTP-FMP4'
+			}, {
 				file: 'http://118.190.79.29/live/_definst_/stream02/manifest.mpd',
 				type: 'dash',
 				label: 'MPEG-DASH'
