--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -111,7 +111,7 @@ a:active, a:focus, a:hover {
 				type: 'flv',
 				label: 'HTTP-FLV'
 			}, {
-				file: 'http://118.190.79.29/live/_definst_/stream02.m4v',
+				file: 'http://118.190.79.29/live/_definst_/stream02',
 				type: 'fmp4',
 				label: 'HTTP-FMP4'
 			}, {
