--- a/solutions.html
+++ b/solutions.html
@@ -247,7 +247,7 @@
 				type: 'flv',
 				label: 'HTTP-FLV'
 			}, {
-				file: 'http://118.190.79.29/live/_definst_/stream02.m4v',
+				file: 'http://118.190.79.29/live/_definst_/stream02',
 				type: 'fmp4',
 				label: 'HTTP-FMP4'
 			}, {
