--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -108,6 +108,7 @@
 			
 			<h3>Static Builds</h3>
 			<ul class='u5 square'>
+				x86:<br/>
 				<li>Windows: <a href='static/rtmpmate-win32-latest.zip'>rtmpmate-win32-latest.zip</a></li>
 				<li>Linux: <a href='static/rtmpmate-linux-latest.zip'>rtmpmate-linux-latest.zip</a></li>
 			</ul>
@@ -116,7 +117,7 @@
 			<ul class='u5 square white'>
 				<li class='deletion'>1031-1258-3831-5825-6283</li>
 				<li class='deletion'>1031-6800-6732-1714-5786</li>
-				<li>1031-8775-3856-0415-5763</li>
+				<li class='deletion'>1031-8775-3856-0415-5763</li>
 				<li>1031-0017-5051-2068-5550</li>
 				<li>1031-7326-0358-2167-3800</li>
 				<li>1031-4745-6253-2376-8724</li>
