--- a/blog.html
+++ b/blog.html
@@ -70,10 +70,10 @@
 				<li>
 					<a href='#'>PROJECTS</a>
 					<ul>
-						<li><a href='slicease.html'>slicease.js 3.0</a></li>
+						<li><a href='rtmpmate.html'>rtmpmate</a></li>
 						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='rtmpmate.html'>rtmpmate</a></li>
+						<li><a href='slicease.html'>slicease.js</a></li>
 					</ul>
 				</li>
 				<li><a href='contact.html'>CONTACT</a></li>
