--- a/solutions.html
+++ b/solutions.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="playease.js,chatease.js,rtmpmate,微信直播,弹幕直播" />
+	<meta name="keywords" content="rtmpmate,playease.js,chatease.js,微信直播,弹幕直播" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
@@ -44,9 +44,6 @@
 	<script type='text/javascript' src='js/bscroll.min.js'></script>
 	<script type='text/javascript' src='js/playease.min.js'></script>
 	<script type='text/javascript' src='js/chatease.min.js'></script>
-	
-	<!-- 请置于所有广告位代码之前 -->
-	<script src="http://dup.baidustatic.com/js/ds.js"></script>
 </head>
 <body ontouchstart=''>
 	<header>
@@ -127,18 +124,18 @@
 		<div class='features'>
 		<section>
 			<span>
-				<a href='#'>
+				<a href='rtmpmate.html' target='_blank'>
 					<div class='img-container'>
-						<img src='images/content/custom-branding.png' />
+						<img src='images/content/video-analytics.png' />
 					</div>
 					<div>
-						<h4>VIDEO PLAYER BRANDING</h4>
-						<span>Build the experience of the multi-platform player you want.</span>
+						<h4>LIVE STREAMING SERVER</h4>
+						<span>High performance & cross-platform media server with a lot of features.</span>
 					</div>
 				</a>
 			</span>
 			<span>
-				<a href='#'>
+				<a>
 					<div class='img-container'>
 						<img src='images/content/adaptive-streaming.png' />
 					</div>
@@ -149,18 +146,18 @@
 				</a>
 			</span>
 			<span>
-				<a href='#'>
+				<a href='playease.html' target='_blank'>
 					<div class='img-container'>
-						<img src='images/content/ad-insertion.png' />
+						<img src='images/content/custom-branding.png' />
 					</div>
 					<div>
-						<h4>ADVERTISING & PLUGINS</h4>
-						<span>Easy video ad delivery and implementation of other plugins.</span>
+						<h4>VIDEO PLAYER BRANDING</h4>
+						<span>Build the experience of the multi-platform player you want.</span>
 					</div>
 				</a>
 			</span>
 			<span>
-				<a href='#'>
+				<a href='chatease.html' target='_blank'>
 					<div class='img-container'>
 						<img src='images/content/realtime-message.png' />
 					</div>
@@ -170,22 +167,19 @@
 					</div>
 				</a>
 			</span>
+			<span>
+				<a>
+					<div class='img-container'>
+						<img src='images/content/ad-insertion.png' />
+					</div>
+					<div>
+						<h4>ADVERTISING & PLUGINS</h4>
+						<span>Easy video ad delivery and implementation of other plugins.</span>
+					</div>
+				</a>
+			</span>
 		</section>
 		</div>
-		
-		<!-- 广告位：左右悬浮位 -->
-		<script>
-			(function() {
-				var s = "_" + Math.random().toString(36).slice(2);
-				document.write('<div id="' + s + '"></div>');
-				(window.slotbydup=window.slotbydup || []).push({
-					id: '5541030',
-					container: s,
-					size: '120,300',
-					display: 'float'
-				});
-			})();
-		</script>
 	</div>
 	
 	<footer>
