--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="rtmpmate,rtmp,websocket,高并发,聊天室,服务器" />
+	<meta name="keywords" content="rtmpmate,rtmp,websocket,高并发,流媒体,直播,聊天室,服务器" />
 	<meta name="description" content="This is not only a websocket chat server, but also a functional media server." />
 	<meta name="author" content="Tony Lau" />
 	
@@ -106,7 +106,44 @@
 				<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat server & functional media server, beta released.<i> - Oct. 31, 2018</i></li>
 			</ul>
 			
-			<h3>Static Builds</h3>
+			<h3>Pricing</h3>
+			<ul class='u5 plan'>
+				<li>
+					<h3 class='center'>Monthly</h3>
+					<p>Pay-as-you-go based on the number of monthes.</p>
+					<div class='center'>
+						<span class='pricing'>
+							<strong>￥500</strong>
+							<div>per license<br/>per month</div>
+						</span>
+					</div>
+					<a class='btn green' href='contact.html' target='_blank'>Buy it Now</a>
+				</li>
+				<li class='current'>
+					<h3 class='center'>Annual</h3>
+					<p>Prepay for 12 monthes to get 20% off the price.</p>
+					<div class='center'>
+						<span class='pricing'>
+							<strong>￥400</strong>
+							<div>per license<br/>per month</div>
+						</span>
+					</div>
+					<a class='btn green' href='contact.html' target='_blank'>Buy it Now</a>
+				</li>
+				<li>
+					<h3 class='center'>Perpetual</h3>
+					<p>Pay a single fee for a lifetime license. Includes one year of maintenance and support.</p>
+					<div class='center'>
+						<span class='pricing'>
+							<strong>￥12000</strong>
+							<div>per license</div>
+						</span>
+					</div>
+					<a class='btn green' href='contact.html' target='_blank'>Buy it Now</a>
+				</li>
+			</ul>
+			
+			<h3 style='margin: 20px 0 0 0; display: inline-block;'>Static Builds</h3>
 			<ul class='u5 square'>
 				x86:<br/>
 				<li>Windows: <a href='static/rtmpmate-win32-latest.zip'>rtmpmate-win32-latest.zip</a></li>
