--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,6 @@
 			<h3>Contact Us</h3>
 			<p>
 				Talk with an expert about how to meet your goals.<br/>
-				公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813<br/>
 				<i>(Dial the number or post to the email at the top or bottom of the page if you don't get a replay timely.)</i>
 			</p>
 		</section>
@@ -103,6 +102,7 @@
 			<div class='ol-status' style='width: 100%; max-width: 640px;'>
 				<label>Online: </label>
 				<span id='ol-users'>0</span>
+				<i>&nbsp;&nbsp;&nbsp;&nbsp;公众号：STUDEASE&nbsp;&nbsp;&nbsp;&nbsp;QQ群：528109813</i>
 			</div>
 			<div id='chatwrap' style='width: 100%; max-width: 640px; height: 400px;'>
 				<div id='chat'></div>
