--- a/slicease.html
+++ b/slicease.html
@@ -92,7 +92,9 @@
 			<h2>slicease.js</h2>
 			<p>
 				[source] <a href='https://github.com/studease/slicease' target='_blank'>https://github.com/studease/slicease</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/39624155' target='_blank'>http://blog.csdn.net/icysky1989/article/details/39624155</a>
+				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/39624155' target='_blank'>http://blog.csdn.net/icysky1989/article/details/39624155</a><br/>
+				公众号：STUDEASE<br/>
+				QQ群：528109813
 			</p>
 			
 			<p>
