--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -92,7 +92,7 @@
 			<h2>rtmpmate</h2>
 			<p>
 				[source] <a href='https://github.com/studease/rtmpmate' target='_blank'>https://github.com/studease/rtmpmate</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br/>
+				[中文] <a href='https://blog.csdn.net/icysky1989/article/details/88946642' target='_blank'>https://blog.csdn.net/icysky1989/article/details/88946642</a><br/>
 				公众号：STUDEASE<br/>
 				QQ群：528109813
 			</p>
