--- a/about.html
+++ b/about.html
@@ -86,7 +86,12 @@
 	<div class='wrap'>
 		<div class='center'>
 		<section>
-			<a>"We love working on programmer. It feels like a puzzle and that we're both creating and solving at the same time."</a>
+			<p>
+				公众号：STUDEASE<br/>
+				QQ群：528109813
+			</p>
+			
+			<p>"We love working on programmer. It feels like a puzzle and that we're both creating and solving at the same time."</p>
 		</section>
 		</div>
 	</div>
