--- a/faq.html
+++ b/faq.html
@@ -87,6 +87,15 @@
 	</header>
 	
 	<div class='wrap'>
+		<div>
+		<section>
+			<p>
+				公众号：STUDEASE<br/>
+				QQ群：528109813
+			</p>
+		</section>
+		</div>
+		
 		<article id='slicease'>
 		<section>
 			<h3>slicease.js</h3>
