--- a/playease.html
+++ b/playease.html
@@ -101,9 +101,16 @@
 			</p>
 			
 			<p>
-				This is a HTML5 video player for FLV/fMP4 live streaming, FLV/fMP4 VoD, MPEG-DASH, and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS.<br/>
-				It also supports RTMP streaming for MSIE with flash embed in.
+				This is a HTML5 video player for modern live streaming. It supports:
 			</p>
+			<ul class='u5 circle'>
+				<li>RTMP (For MSIE8-10 with flash embed in)</li>
+				<li>HTTP/WebSocket-FLV</li>
+				<li>HTTP/WebSocket-fMP4</li>
+				<li>MPEG-DASH</li>
+				<li>HLS (on mobile)</li>
+				<li>Original HTML5 media resources (eg. Ogg, Mpeg4, WebM)</li>
+			</ul>
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
