--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -98,8 +98,17 @@
 			</p>
 			
 			<p>
-				This is not only a websocket chat server, but also a functional media server.
+				This is a modern live streaming server. It supports: 
 			</p>
+			<ul class='u5 circle'>
+				<li>RTMP, HTTP-FLV, HTTP-fMP4, MPEG-DASH, HLS</li>
+				<li>FLV Recording (Remote Controllable), Live Playback</li>
+				<li>WebSocket Chat (Danmu)</li>
+				<li>Event Report</li>
+				<li>Origin-Edge, Proxy, Load Balancing</li>
+				<li>CORS Control (Origin Protection)</li>
+				<li>Customized Development (Extra Charge)</li>
+			</ul>
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
