--- a/playease.html
+++ b/playease.html
@@ -109,7 +109,7 @@
 				<li>HTTP/WebSocket-fMP4</li>
 				<li>MPEG-DASH</li>
 				<li>HLS (on mobile)</li>
-				<li>Original HTML5 media resources (eg. Ogg, Mpeg4, WebM)</li>
+				<li>Original HTML5 Media Resources (eg. Ogg, Mpeg4, WebM)</li>
 			</ul>
 			
 			<h3>News</h3>
