--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -115,7 +115,7 @@
 				<li><a href='rtmpmate.html'>Rtmpmate</a>, a websocket chat server & functional media server, beta released.<i> - Oct. 31, 2018</i></li>
 			</ul>
 			
-			<h3>Pricing</h3>
+			<!--<h3>Pricing</h3>
 			<ul class='u5 plan'>
 				<li>
 					<h3 class='center'>Monthly</h3>
@@ -150,7 +150,7 @@
 					</div>
 					<a class='btn green' href='contact.html' target='_blank'>Buy it Now</a>
 				</li>
-			</ul>
+			</ul>-->
 			
 			<h3 style='margin: 20px 0 0 0; display: inline-block;'>Static Builds</h3>
 			<ul class='u5 square'>
