--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -164,7 +164,7 @@
 				<li class='deletion'>1031-1258-3831-5825-6283</li>
 				<li class='deletion'>1031-6800-6732-1714-5786</li>
 				<li class='deletion'>1031-8775-3856-0415-5763</li>
-				<li>1031-0017-5051-2068-5550</li>
+				<li class='deletion'>1031-0017-5051-2068-5550</li>
 				<li>1031-7326-0358-2167-3800</li>
 				<li>1031-4745-6253-2376-8724</li>
 				<li>1031-3868-7381-0446-4614</li>
