--- a/rtmpmate.html
+++ b/rtmpmate.html
@@ -101,7 +101,7 @@
 				This is a modern live streaming server. It supports: 
 			</p>
 			<ul class='u5 circle'>
-				<li>RTMP, HTTP-FLV, HTTP-fMP4, MPEG-DASH, HLS</li>
+				<li>RTMP, RTSP (TCP), HTTP-FLV, HTTP-fMP4, MPEG-DASH, HLS</li>
 				<li>FLV Recording (Remote Controllable), Live Playback</li>
 				<li>WebSocket Chat (Danmu)</li>
 				<li>Event Report</li>
