--- a/cms/index.html
+++ b/cms/index.html
@@ -227,6 +227,7 @@
 				aspectratio: '16:9',
 				file: url,
 				mode: 'live',
+				controls: false,
 				autoplay: false,
 				logo: {
 					visible: false
