--- a/cms/index.html
+++ b/cms/index.html
@@ -41,8 +41,8 @@
 	
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	
-	<script type='text/javascript' src='js/playease.min.js'></script>
-	<!--<script type='text/javascript' src='js/cn/studease/playease.js'></script>
+	<!--<script type='text/javascript' src='js/playease.min.js'></script>-->
+	<script type='text/javascript' src='js/cn/studease/playease.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.crypt.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.endian.js'></script>
@@ -103,44 +103,9 @@
 	<script type='text/javascript' src='js/cn/studease/core/playease.core.controller.js'></script>
 	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.js'></script>
 	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.config.js'></script>
-	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.embedder.js'></script>-->
+	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.embedder.js'></script>
 </head>
 <body ontouchstart=''>
-	<header>
-		<div class='topbar'>
-		<section>
-			<ul class='info'>
-				<li><span class='icon-card'>Name: Tony Lau</span></li>
-				<li><span class='icon-phone'>Phone: +8618224088983</span></li>
-				<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
-				<li><span class='icon-address'>Address: Chongqing, China</span></li>
-			</ul>
-		</section>
-		</div>
-		
-		<nav>
-		<section>
-			<ul>
-				<li class='current'><a href='#'>HOME</a></li>
-				<li><a href='#'>ABOUT</a></li>
-				<li><a href='#'>NEWS</a></li>
-				<li><a href='#'>SOLUTIONS</a></li>
-				<li>
-					<a href='#'>PROJECTS</a>
-					<ul>
-						<li><a href='#'>rtmpmate</a></li>
-						<li><a href='#'>playease.js</a></li>
-						<li><a href='#'>chatease.js</a></li>
-						<li><a href='#'>slicease.js</a></li>
-					</ul>
-				</li>
-				<li><a href='#'>CONTACT</a></li>
-				<li><a href='#'>BLOG</a></li>
-			</ul>
-		</section>
-		</nav>
-	</header>
-	
 	<div class='wrap'>
 		<div class='control-container'>
 		<section>
@@ -160,20 +125,6 @@
 		</section>
 		</div>
 	</div>
-	
-	<footer>
-		<div class='footerall'>
-		<section>
-			
-		</section>
-		</div>
-		
-		<div class='copyright'>
-		<section>
-			<span>Copyright &copy; 2019 studease.cn | All Rights Reserved</span>
-		</section>
-		</div>
-	</footer>
 	
 	<script type='text/javascript'>
 		var utils = playease.utils,
