--- a/cms/index.html
+++ b/cms/index.html
@@ -41,8 +41,8 @@
 	
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	
-	<!--<script type='text/javascript' src='js/playease.min.js'></script>-->
-	<script type='text/javascript' src='js/cn/studease/playease.js'></script>
+	<script type='text/javascript' src='js/playease.min.js'></script>
+	<!--<script type='text/javascript' src='js/cn/studease/playease.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.crypt.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.endian.js'></script>
@@ -103,7 +103,7 @@
 	<script type='text/javascript' src='js/cn/studease/core/playease.core.controller.js'></script>
 	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.js'></script>
 	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.config.js'></script>
-	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.embedder.js'></script>
+	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.embedder.js'></script>-->
 </head>
 <body ontouchstart=''>
 	<div class='wrap'>
