--- a/cms/index.html
+++ b/cms/index.html
@@ -187,6 +187,7 @@
 				file: url,
 				mode: 'live',
 				controls: false,
+				doubleClick: 'fullpage',
 				autoplay: false,
 				logo: {
 					visible: false
